# mdeval

./: .gitignore  LICENSE  README.md  publish.sh  pyproject.toml
.github/workflows/: python-package.yml
mdeval/: cli.py  io.py  munkres.py  scoring.py  utils.py
tests/: test_io.py  test_munkres.py  test_scoring.py  test_utils.py
