[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdeval"
version = "0.1.1"
description = "A Python implementation of the NIST md-eval.pl script for evaluating rich transcription accuracy."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "User", email = "user@example.com"},
]
dependencies = []

[project.scripts]
mdeval = "mdeval.cli:main"
